2005-06-20 13:37  Andrej Kacian <andrej@kacian.sk>
	* src: silc-channel.c, clientops.c silc-presence.c: Wrote some
	  groundwork for WHOIS

2005-06-13 02:05  Andrej Kacian <andrej@kacian.sk>
	* src/clientops.c: Set internal channel topic on join.

2005-06-13 01:58  Andrej Kacian <andrej@kacian.sk>
	* src: silc.h, clientops-notify.c, silc-client.c: Handle channel topic
	  set event.

2005-06-13 00:48  Andrej Kacian <andrej@kacian.sk>
	* src/clientops-notify.c: Break up server MOTD into lines and send
	  each line in a separate gateway_motd event, last followed by
	  gateway_motd_end event.

2005-06-13 00:03  Andrej Kacian <andrej@kacian.sk>
	* src: clientops.c, silc-client.c, clientops-notify.c, silc-client.h
	  silc-presence.c: Implement own nickname changing.

2005-06-11 02:01  Andrej Kacian <andrej@kacian.sk>
	* src: silc.h, clientops-notify.c silc-client.c: Handle nickname
	  changes. Prefixed key-related event names with "silc_".

2005-06-10 23:32  Andrej Kacian <andrej@kacian.sk>
	* src: silc.h, clientops-notify.c: Handle channel kicks

2005-06-10 23:20  Andrej Kacian <andrej@kacian.sk>
	* Initial import to svn